--- a/EthicalShopping/EthicalShopping/app/css/style.css
+++ b/EthicalShopping/EthicalShopping/app/css/style.css
@@ -1,6 +1,3 @@
-body {
-    font-family:
-}
 
 .accordion {
     background-color: #eee;
@@ -28,27 +25,27 @@ body {
 }
 
 .logo {
+    height: 20%;
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-    size: 50%;
+    size: 10%;
     margin-bottom: 1rem;
     margin-top: 1rem;
 }
 
-.roundbox {
-    border-radius: 0.5rem;
-}
-
 .fit-buttons {
-    padding: 0.2rem;
+    padding: 0.5rem;
 }
 
-.brand-fix {
-    margin-left: 0.9rem;
-    margin-right: 0.9rem;
-    font: "Gill Sans Regular", sans-serif;
+.brand-fix-left {
+    margin-left: 3rem;
+}
+
+.brand-fix-right {
+    margin-left: 8rem;
+    margin-right: 2rem;
 }
 
 .shadow-body {
@@ -61,6 +58,79 @@ body {
 }
 
 .phrase-fix {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    size: 50%;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
     text-align: center;
-    font: "Gill Sans Regular", sans-serif;
+}
+
+.font-name {
+    font-family: GillSans;
+    font-size: 24px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #6b717e;
+}
+
+.font-description {
+    font-family: GillSans;
+    font-size: 14px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #6b717e;
+}
+
+.font-praises { 
+    font-family: GillSans;
+    font-size: 24px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #5b8959;
+ }
+
+ .font-critism { 
+    font-family: GillSans;
+    font-size: 24px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #fa5d5b;
+ }
+
+.box-critism { 
+    border-radius: 4px;
+    background-color: rgba(246, 171, 171, 0.93);
+    box-shadow: 0 1px 1px 1px rgba(107, 113, 126, 0.25);
+ }
+
+.box-praises {
+    border-radius: 4px;
+    background-color: #bfffbc;
+    box-shadow: 0 1px 1px 1px rgba(107, 113, 126, 0.25);
+ }
+
+.font-list {
+  font-family: GillSans;
+  font-size: 16px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #6b717e;
 }
