--- a/EthicalShopping/EthicalShopping/app/css/style.css
+++ b/EthicalShopping/EthicalShopping/app/css/style.css
@@ -22,6 +22,7 @@
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
+    margin-top: 0.5rem;
 }
 
 .logo {
@@ -33,6 +34,8 @@
     size: 10%;
     margin-bottom: 1rem;
     margin-top: 1rem;
+    width: auto;
+    height: 25px;
 }
 
 .fit-buttons {
@@ -44,7 +47,7 @@
 }
 
 .brand-fix-right {
-    margin-left: 8rem;
+    margin-left: 10rem;
     margin-right: 2rem;
 }
 
