--- a/EthicalShopping/EthicalShopping/app/css/style.css
+++ b/EthicalShopping/EthicalShopping/app/css/style.css
@@ -161,3 +161,139 @@
   background: rgba(246, 171, 171, 0.93);;
   border: 2px solid #fa5d5b;
 }
+
+.profile-title { 
+  font-family: GillSans;
+  font-size: 48px;
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #6b717e;
+  margin-top: 192px;
+  margin-left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+ }
+
+.profile-detail-text {
+  font-family: GillSans;
+  font-size: 18px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #6b717e;
+  margin-left: 50%;
+  margin-right: -50%;
+  margin-bottom: 75px;
+  transform: translate(-50%, -50%);
+
+}
+
+.profile-sentence-text {
+  font-family: GillSans;
+  font-size: 36px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.42;
+  letter-spacing: normal;
+  color: #6b717e;
+}
+
+.profile-alginment {
+    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    size: 50%;
+}
+
+/* Product Dropdown Button */
+.product-dropbtn {
+    background-color: #4CAF50;
+    height: 5px;
+    width: 16rem;
+    color: white;
+    margin-top: 2rem;
+    margin-left: 1rem;
+    font-size: 16px;
+    border: none;
+}
+
+/* Impact Dropdown Button */
+.impact-dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.product-dropdown {
+  display: inline;
+  text-align: center;
+}
+
+.impact-dropdown {
+  display: inline;
+  text-align: center;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.product-content {
+      margin-left: 1rem;
+    display: none;
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0.93);
+    min-width: 250px;
+    max-width: 80px;
+    box-shadow: 0px 2px 4px 4px rgba(107,113,126,0.25);
+    z-index: 1000;
+}
+
+/* Links inside the dropdown */
+.product-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block
+}
+
+/* Dropdown Content (Hidden by Default) */
+.impact-content {
+    display: none;
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0.93);
+    min-width: 250px;
+    max-width: 80px;
+    box-shadow: 0px 2px 4px 4px rgba(107,113,126,0.25);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.impact-content  a {
+    display: block;
+    position: inline;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+}
+
+/* Change color of dropdown links on hover */
+.product-content  a:hover {background-color: rgba(191, 255, 188, 0.4);}
+.impact-content  a:hover {background-color: rgba(191, 255, 188, 0.4);}
+
+/* Show the dropdown menu on hover */
+.product-dropdown:hover .product-content {display: block;}
+.impact-dropdown:hover .impact-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.product-dropdown:hover .product-dropbtn {background-color: #3e8e41;}
+.impact-dropdown:hover .impact-dropbtn {background-color: #3e8e41;}
+
